--- a/index_RO_dash2.html
+++ b/index_RO_dash2.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Number of Representative Offices in Certain Fields of Work, by NGOs’ Country/Region of Origin, January-August 2017</h1></div>
+<div id="header"><h1>Number of Representative Offices in Certain Fields of Work, by NGOs’ Country/Region of Origin, January-September 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -189,11 +189,39 @@ padding:0px;
 
 function dashboard(id, fData){
     var barColor = '#666666';
-    function segColor(c){ return {Aging:"#520010", Agriculture:"#7a0018", Animals:"#a30021", Culture:"#cc0029", Capacity:"#f50031", Disabilities:"#ff1f4b", Disaster:"#ff476c", Development:"#ff708d", Education:"#ff99ad", Energy:"#ffc2ce", Environment:"#ff335c", Ethnic:"#0b536f", Health:"#0f6f95", Infrastructure:"#128aba", International:"#16a6df", Labor:"#33b7eb", Law:"#58c4ee", Poverty:"#7dd1f2", Religion: "#0d6182", Rural:"#a2def6", Sport:"#c7ebf9", Technology:"#231f1f", Tourism:"#555555", Trade:"#999999", Women:"#d8d8d8", Youth:"#f2f2f2"
+    function segColor(c){ return {
+        Aging:"#290008",
+        Agriculture:"#520010",
+        Animals:"#7a0018",
+        Culture:"#a30021",
+        Capacity:"#cc0029",
+        Disabilities:"#f50031",
+        Disaster:"#ff1f4b",
+        Development:"#ff476c",
+        Education:"#ff708d",
+        Energy:"#ff859d",
+        Environment:"#ffadbe",
+        Ethnic:"#ffd6de",
+        Gender:"#041c25",
+        Health:"#07374a",
+        Infrastructure:"#0b536f",
+        International:"#0f6f95",
+        Labor:"#128aba",
+        Law:"#16a6df",
+        Migrants:"#33b7eb",
+        Poverty:"#58c4ee",
+        Religion: "#7dd1f2",
+        Rural:"#a2def6",
+        Sport:"#c7ebf9",
+        Technology:"#ecf8fd",
+        Tourism:"#231f1f",
+        Trade:"#555555",
+        Urban:"#999999",
+        Youth:"#d8d8d8"
   }[c]; }
 
     // compute total for each state.
-    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Poverty+d.freq.Religion+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Women+d.freq.Youth;});
+    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Gender+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Migrants+d.freq.Poverty+d.freq.Religion+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Urban+d.freq.Youth;});
 
     // function to handle histogram.
     //USE THIS AREA TO ADJUST LOCATION OF X AXIS AND MAX BAR HEIGHT
@@ -407,7 +435,7 @@ var tooltip = d3.select("body").append("div").attr("class", "toolTip");
     }
 
     // calculate total frequency by segment for all state.
-    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Health','Infrastructure','International','Labor','Law','Poverty','Religion','Rural','Sport','Technology','Tourism','Trade','Women','Youth'].map(function(d){
+    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Gender','Health','Infrastructure','International','Labor','Law','Migrants','Poverty','Religion','Rural','Sport','Technology','Tourism','Trade','Urban','Youth'].map(function(d){
         return {type:d, freq: d3.sum(fData.map(function(t){ return t.freq[d];}))};
     });
 
@@ -444,11 +472,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 2,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -456,7 +486,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 1}},
 	{
 	origin: "Belgium",
@@ -473,25 +503,27 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 1,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 1,
-	Women: 0,
+	Trade: 2,
+	Urban: 1,
 	Youth: 0}},
 {
 	origin: "Canada",
 	freq:{
 	Aging: 0,
-	Agriculture: 1,
+	Agriculture: 2,
 	Animals: 0,
 	Culture: 0,
 	Capacity: 0,
@@ -502,19 +534,21 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 1,
 	Infrastructure: 0,
-	International: 1,
+	International: 2,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 1,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 3,
-	Women: 0,
+	Trade: 4,
+	Urban: 0,
 	Youth: 1}},
 {
 	origin: "Denmark",
@@ -531,11 +565,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -543,7 +579,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "France",
@@ -560,19 +596,21 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 1,
 	Infrastructure: 0,
-	International: 0,
+	International: 1,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
-	Sport: 0,
+	Sport: 1,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 2,
-	Women: 0,
+	Trade: 3,
+	Urban: 0,
 	Youth: 1}},
 {
 	origin: "Germany",
@@ -585,15 +623,17 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 3,
-	Education: 5,
+	Education: 6,
 	Energy: 0,
 	Environment: 4,
 	Ethnic: 1,
+  Gender: 1,
 	Health: 2,
 	Infrastructure: 0,
 	International: 8,
 	Labor: 2,
 	Law: 2,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 1,
@@ -601,7 +641,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 2,
-	Women: 1,
+	Urban: 1,
 	Youth: 4}},
 {
 	origin: "Hong Kong",
@@ -609,29 +649,31 @@ var freqData=[
 	Aging: 1,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 7,
-	Capacity: 6,
+	Culture: 8,
+	Capacity: 8,
 	Disabilities: 3,
-	Disaster: 20,
-	Development: 0,
-	Education: 16,
+	Disaster: 21,
+	Development: 1,
+	Education: 21,
 	Energy: 0,
-	Environment: 2,
+	Environment: 3,
 	Ethnic: 1,
+  Gender: 2,
 	Health: 9,
 	Infrastructure: 5,
-	International: 6,
-	Labor: 5,
-	Law: 0,
-	Poverty: 14,
+	International: 10,
+	Labor: 2,
+	Law: 1,
+  Migrants: 5,
+	Poverty: 15,
   Religion: 0,
 	Rural: 3,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 8,
-	Women: 0,
-	Youth: 18}},
+	Trade: 7,
+	Urban: 1,
+	Youth: 19}},
 {
 	origin: "India",
 	freq:{
@@ -647,40 +689,44 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 1,
-	Women: 0,
+	Trade: 2,
+	Urban: 0,
 	Youth: 0}},
 	{
 	origin: "Italy",
 	freq:{
-	Aging: 0,
+	Aging: 1,
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
 	Capacity: 0,
-	Disabilities: 1,
+	Disabilities: 2,
 	Disaster: 0,
 	Development: 0,
 	Education: 1,
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
-	Health: 1,
+  Gender: 1,
+	Health: 2,
 	Infrastructure: 0,
 	International: 1,
 	Labor: 1,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -688,8 +734,8 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 0,
-	Women: 0,
-	Youth: 0}},
+	Urban: 0,
+	Youth: 1}},
 
 {
 	origin: "Japan",
@@ -697,28 +743,30 @@ var freqData=[
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 0,
+	Culture: 2,
 	Capacity: 0,
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 1,
 	Education: 0,
 	Energy: 0,
-	Environment: 1,
+	Environment: 2,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 1,
+	International: 4,
 	Labor: 1,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
-	Sport: 0,
+	Sport: 1,
 	Technology: 1,
 	Tourism: 2,
-	Trade: 16,
-	Women: 0,
+	Trade: 29,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "Macau",
@@ -731,23 +779,25 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
-	Education: 0,
+	Education: 1,
 	Energy: 0,
 	Environment: 0,
-	Ethnic: 0,
+	Ethnic: 1,
+  Gender: 0,
 	Health: 2,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
-	Sport: 0,
+	Sport: 1,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 1,
 	Youth: 1}},
 {
 	origin: "Malaysia",
@@ -764,19 +814,21 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 1,
-	Women: 0,
+	Trade: 2,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "Mongolia",
@@ -793,11 +845,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -805,7 +859,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "New Zealand",
@@ -822,11 +876,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -834,7 +890,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "Russia",
@@ -851,11 +907,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -863,7 +921,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 0}},
 		{
 	origin: "Singapore",
@@ -880,11 +938,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -892,7 +952,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "South Korea",
@@ -905,23 +965,25 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 4,
-	Education: 0,
+	Education: 1,
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 1,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
 	Sport: 0,
-	Technology: 1,
+	Technology: 2,
 	Tourism: 0,
-	Trade: 12,
-	Women: 0,
+	Trade: 14,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "Spain",
@@ -938,11 +1000,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -950,7 +1014,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "Switzerland",
@@ -959,56 +1023,60 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 1,
+	Capacity: 2,
 	Disabilities: 0,
-	Disaster: 2,
+	Disaster: 3,
 	Development: 1,
-	Education: 2,
+	Education: 3,
 	Energy: 0,
-	Environment: 2,
+	Environment: 3,
 	Ethnic: 0,
-	Health: 2,
+  Gender: 2,
+	Health: 3,
 	Infrastructure: 0,
 	International: 1,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 2,
   Religion: 0,
-	Rural: 1,
+	Rural: 2,
 	Sport: 1,
-	Technology: 0,
+	Technology: 1,
 	Tourism: 0,
-	Trade: 2,
-	Women: 1,
-	Youth: 2}},
+	Trade: 3,
+	Urban: 0,
+	Youth: 3}},
 {
 	origin: "Taiwan",
 	freq:{
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 2,
+	Culture: 3,
 	Capacity: 1,
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
 	Education: 1,
 	Energy: 0,
-	Environment: 0,
+	Environment: 1,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 2,
+	International: 3,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 1,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 4,
-	Women: 0,
+	Trade: 5,
+	Urban: 0,
 	Youth: 1}},
   {
   	origin: "Turkey",
@@ -1025,11 +1093,13 @@ var freqData=[
   	Energy: 0,
   	Environment: 0,
   	Ethnic: 0,
+    Gender: 0,
   	Health: 0,
   	Infrastructure: 0,
   	International: 1,
   	Labor: 0,
   	Law: 0,
+    Migrants: 0,
   	Poverty: 0,
     Religion: 0,
   	Rural: 0,
@@ -1037,7 +1107,7 @@ var freqData=[
   	Technology: 0,
   	Tourism: 1,
   	Trade: 1,
-  	Women: 0,
+  	Urban: 0,
   	Youth: 0}},
 {
 	origin: "United Arab Emirates",
@@ -1054,11 +1124,13 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
+  Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
+  Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -1066,7 +1138,7 @@ var freqData=[
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
-	Women: 0,
+	Urban: 0,
 	Youth: 0}},
 {
 	origin: "United Kingdom",
@@ -1078,54 +1150,58 @@ var freqData=[
 	Capacity: 0,
 	Disabilities: 0,
 	Disaster: 2,
-	Development: 0,
+	Development: 1,
 	Education: 2,
 	Energy: 0,
 	Environment: 2,
 	Ethnic: 0,
-	Health: 3,
+  Gender: 1,
+	Health: 4,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 1,
+  Migrants: 0,
 	Poverty: 2,
   Religion: 0,
-	Rural: 0,
+	Rural: 1,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 4,
-	Women: 0,
+	Urban: 0,
 	Youth: 1}},
 {
 	origin: "United States",
 	freq:{
 	Aging: 0,
 	Agriculture: 0,
-	Animals: 3,
+	Animals: 5,
 	Culture: 2,
-	Capacity: 4,
+	Capacity: 5,
 	Disabilities: 4,
-	Disaster: 5,
-	Development: 5,
-	Education: 13,
+	Disaster: 6,
+	Development: 6,
+	Education: 15,
 	Energy: 1,
-	Environment: 10,
+	Environment: 12,
 	Ethnic: 0,
+  Gender: 3,
 	Health: 14,
 	Infrastructure: 1,
-	International: 6,
+	International: 7,
 	Labor: 0,
 	Law: 0,
-	Poverty: 5,
+  Migrants: 1,
+	Poverty: 6,
   Religion: 0,
-	Rural: 0,
+	Rural: 1,
 	Sport: 0,
 	Technology: 1,
 	Tourism: 1,
-	Trade: 20,
-	Women: 3,
-	Youth: 9}}
+	Trade: 22,
+	Urban: 1,
+	Youth: 10}}
 ]
 ;
 
@@ -1133,6 +1209,6 @@ dashboard('#dashboard',freqData);
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period. We designated fields based on the work descriptions listed on the Ministry of Public Security website.</li><li>Each representative office has only one country or region of origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, International Relations/Exchange to International, Labor and Migrants to Labor, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Women’s Issues to Women.</li></ul></em>");
+.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period. We designated fields based on the work descriptions listed on the Ministry of Public Security website.</li><li>Each representative office has only one country or region of origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, Gender Issues to Gender, International Relations/Exchange to International, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Urban Issues/Development to Urban.</li></ul></em>");
 
 </script>
