--- a/index.html
+++ b/index.html
@@ -467,6 +467,30 @@
 "website_ch": "http://blesschina.org/wp/?lang=zh"
 }
 },
+
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+108.355286, 22.826089
+]
+},
+"properties": {
+"orgname_en": "Blessing Hands",
+"orgname_ch": "美国祝福之手",
+"psu_en": "Guangxi Department of Education",
+"originloc": "United States",
+"sector": "Education, Health, Poverty Alleviation, Infrastructure",
+"regloc": "Guangxi",
+"regdate": "October 23, 2017",
+"actarea": "Beijing, Guangxi, Guizhou, Yunnan, Gansu",
+"website_en": "http://blessinghands.blogspot.com/"
+}
+},
+
+
+
       {
         "type": "Feature",
         "geometry": {
@@ -818,6 +842,31 @@
           "website_ch": "https://chinamedicalboard.org.cn/"
         }
       },
+
+      {
+       "type": "Feature",
+       "geometry": {
+         "type": "Point",
+         "coordinates": [
+           120.381860, 36.064335
+         ]
+       },
+       "properties": {
+         "orgname_en": "China-Britain Business Council (Shandong)",
+         "orgname_ch": "英中贸易协会",
+         "psu_en": "Shandong Department of Commerce",
+         "originloc": "United Kingdom",
+         "sector": "Trade",
+         "regloc": "Shandong",
+         "regdate": "October 19, 2017",
+         "actarea": "Unknown",
+         "website_en": "http://www.cbbc.org/",
+         "website_ch": "http://www.chinaoutbound.org/"
+       }
+     },
+
+
+
        {
         "type": "Feature",
         "geometry": {
@@ -1004,6 +1053,30 @@
           "website_ch": "http://www.cma.org.hk/"
         }
       },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            101.758286, 36.596374
+          ]
+        },
+        "properties": {
+          "orgname_en": "Christian Action",
+          "orgname_ch": "基督教勵行會",
+          "psu_en": "Qinghai Department of Civil Affairs",
+          "originloc": "Hong Kong",
+          "sector": "Disabilities, Youth, Health, Education, Aging, Poverty Alleviation, Labor, Infrastructure",
+          "regloc": "Qinghai",
+          "regdate": "October 25, 2017",
+          "actarea": "Qinghai",
+          "website_en": "http://www.christian-action.org.hk/index.php/en",
+          "website_ch": "http://www.christian-action.org.hk/index.php/zh"
+        }
+      },
+
+
       {
 "type": "Feature",
 "geometry": {
@@ -1146,6 +1219,30 @@
           "website_ch": "http://www.cottonusa.org.cn/"
         }
       },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.402271, 31.201946
+          ]
+        },
+        "properties": {
+          "orgname_en": "Daegu Exhibition & Convention Center",
+          "orgname_ch": "韩国社团法人大邱会展机构",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "South Korea",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "October 26, 2017",
+          "actarea": "China",
+          "website_en": "http://www.exco.co.kr/eng/",
+          "website_ch": "http://www.exco.co.kr/chi/"
+        }
+      },
+
+
       {
         "type": "Feature",
         "geometry": {
@@ -1707,6 +1804,30 @@
 "website_en": "https://globalvolunteers.org/china/"
 }
 },
+
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+108.289784, 22.832931
+]
+},
+"properties": {
+"orgname_en": "Grace Vessel",
+"orgname_ch": "香港恩友行动",
+"psu_en": "Guangxi Department of Education",
+"originloc": "Hong Kong",
+"sector": "Education, Health, Poverty Alleviation",
+"regloc": "Guangxi",
+"regdate": "October 19, 2017",
+"actarea": "Guangxi",
+"website_en": "http://www.gracevessel.org.hk/eng/introduction.html",
+"website_ch": "http://www.gracevessel.org.hk/big5/introduction.html"
+}
+},
+
+
      {
 "type": "Feature",
 "geometry": {
@@ -1728,6 +1849,7 @@
 "website_ch": "http://www.gratia.org.hk/"
 }
 },
+
 {
   "type": "Feature",
   "geometry": {
@@ -1749,6 +1871,50 @@
     "website_ch": "http://www.gbac.ca/zh-hans/localities/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%B9%BF%E8%A5%BF%E6%80%BB%E5%95%86%E4%BC%9A"
   }
 },
+
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       121.404922, 31.202528
+    ]
+  },
+  "properties": {
+    "orgname_en": "Gunma Industry Organization",
+    "orgname_ch": "日本公益财团法人群马县产业支援机构",
+    "psu_en": "Shanghai Commission of Commerce",
+    "originloc": "Japan",
+    "sector": "Trade",
+    "regloc": "Shanghai",
+    "regdate": "October 26, 2017",
+    "actarea": "China",
+    "website_ch": "http://gunmash.cn/about/index.html"
+  }
+},
+
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       121.401552, 31.201653
+    ]
+  },
+  "properties": {
+    "orgname_en": "Gwangju Economic and Hiring Revitalization Institute",
+    "orgname_ch": "韩国（财）光州广域市经济雇佣振兴院",
+    "psu_en": "Shanghai Commission of Commerce",
+    "originloc": "South Korea",
+    "sector": "Trade",
+    "regloc": "Shanghai",
+    "regdate": "October 26, 2017",
+    "actarea": "China",
+    "website_en": "http://www.kcab.or.kr/servlet/kcab_adm/memberauth/5000"
+  }
+},
+
+
 {
   "type": "Feature",
   "geometry": {
@@ -2244,6 +2410,28 @@
           "actarea": "Jiangsu"
         }
       },
+
+      {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      121.462333, 31.229424
+    ]
+  },
+  "properties": {
+    "orgname_en": "International Association of Amusement Parks and Attractions (IAAPA)",
+    "orgname_ch": "国际游乐园及景点协会",
+    "psu_en": "Shanghai Tourism Administration",
+    "originloc": "United States",
+    "sector": "Tourism, Education, Trade",
+    "regloc": "Shanghai",
+    "regdate": "October 26, 2017",
+    "actarea": "China",
+    "website_en": "http://www.iaapa.org/"
+  }
+},
+
 
 {
   "type": "Feature",
@@ -3653,6 +3841,31 @@
           "website_ch": "http://paulsoninstitute.org.cn/"
         }
       },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            102.722614, 25.035885
+          ]
+        },
+        "properties": {
+          "orgname_en": "Peach Foundation",
+          "orgname_ch": "培志教育协会",
+          "psu_en": "Yunnan Department of Education",
+          "originloc": "Taiwan",
+          "sector": "Education, Poverty Alleviation, Infrastructure",
+          "regloc": "Yunnan",
+          "regdate": "October 20, 2017",
+          "actarea": "Yunnan",
+          "website_en": "http://www.peachfoundationusa.org/servlet/peachweb",
+          "website_ch": "http://www.peachfoundationusa.org/servlet/PEACHServlet?action=display&page=/chinese"
+        }
+      },
+
+
+
       {
       "type": "Feature",
       "geometry": {
@@ -3939,6 +4152,29 @@
           "actarea": "Guangdong"
         }
       },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      102.714673, 25.052094
+      ]
+      },
+      "properties": {
+      "orgname_en": "SIL International",
+      "orgname_ch": "世界少数民族语文研究院",
+      "psu_en": "Yunnan Department of Education",
+      "originloc": "United States",
+      "sector": "Ethnic Affairs, Education",
+      "regloc": "Yunnan",
+      "regdate": "October 20, 2017",
+      "actarea": "Yunnan",
+      "website_en": "https://www.sil.org/"
+      }
+      },
+
+
       {
       "type": "Feature",
       "geometry": {
@@ -4185,6 +4421,26 @@
           "actarea": "Guangdong, Guangxi, Fujian, Jiangxi, Hainan, Yunnan, Guizhou"
         }
       },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             121.482667, 31.172740
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Korean Commercial Arbitration Board",
+          "orgname_ch": "韩国大韩商事仲裁院",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "South Korea",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "October 26, 2017",
+          "actarea": "Beijing, Liaoning, Shanghai, Jiangsu, Zhejiang, Fujian, Shandong, Guangdong"
+        }
+      },
+
 
       {
         "type": "Feature",
