--- a/index_registeredofficestable.html
+++ b/index_registeredofficestable.html
@@ -84,7 +84,6 @@ font-style: italic;
 <table class="sortable">
 <!–– add your tableizer data below this line––>
   
-
 <thead><tr class="tableizer-firstrow"><th>Organization Name (English)</th><th>Organization Name (Chinese)</th><th>Professional Supervisory Unit (English)</th><th>Professional Supervisory Unit (Chinese)</th><th>Organization Origin</th><th>Field of Work</th><th>Registration Location</th><th>Date of Registration</th><th>Permitted Area(s) of Operation</th></tr></thead><tbody>
  <tr><td>Canada China Business Council (Shanghai)</td><td>加拿大加中贸易理事会</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>Canada</td><td>Trade</td><td>Shanghai</td><td>2017-01-17</td><td>Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Guangdong, Guangxi, Hainan, Guizhou, Yunnan</td></tr>
  <tr><td>Confederation of Indian Industry</td><td>印度工业联合会</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>India</td><td>Trade</td><td>Shanghai</td><td>2017-01-17</td><td>China</td></tr>
@@ -315,17 +314,21 @@ font-style: italic;
  <tr><td>Global Alliance of SMEs</td><td>全球中小企业联盟</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>United States</td><td>Trade</td><td>Shanghai</td><td>2017-09-29</td><td>China</td></tr>
  <tr><td>Delegations of German Industry & Commerce</td><td>德国工商大会</td><td>Guangdong Department of Commerce</td><td>广东省商务厅</td><td>Germany</td><td>Trade</td><td>Guangdong</td><td>2017-10-06</td><td>Fuijian, Hunan, Guangdong, Guangxi, Hainan, Chongqing, Sichuan, Guizhou, Yunnan</td></tr>
  <tr><td>Osaka Industrial Revitalization Organization</td><td>日本公益财团法人大阪产业振兴机构</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>Japan</td><td>Trade</td><td>Shanghai</td><td>2017-10-13</td><td>China</td></tr>
+ <tr><td>China-Britain Business Council (Shandong)</td><td>英中贸易协会</td><td>Shandong Department of Commerce</td><td>山东省商务厅</td><td>United Kingdom</td><td>Trade</td><td>Shandong</td><td>2017-10-19</td><td>Unknown</td></tr>
  <tr><td>Grace Vessel</td><td>香港恩友行动</td><td>Guangxi Department of Education</td><td>广西壮族自治区教育厅        </td><td>Hong Kong</td><td>Education, Health, Poverty Alleviation</td><td>Guangxi</td><td>2017-10-19</td><td>Guangxi</td></tr>
- <tr><td>China-Britain Business Council</td><td>英中贸易协会</td><td>Shandong Department of Commerce</td><td>山东省商务厅</td><td>United Kingdom</td><td>Trade</td><td>Shandong</td><td>2017-10-19</td><td>Unknown</td></tr>
- <tr><td>SIL International</td><td>世界少数民族语文研究院</td><td>Yunnan Department of Education</td><td>云南省教育厅</td><td>United States</td><td>Ethnic Affairs, Education</td><td>Yunnan</td><td>2017-10-20</td><td>Yunnan</td></tr>
  <tr><td>Peach Foundation</td><td>培志教育协会</td><td>Yunnan Department of Education</td><td>云南省教育厅</td><td>Taiwan</td><td>Education, Poverty Alleviation, Infrastructure</td><td>Yunnan</td><td>2017-10-20</td><td>Yunnan</td></tr>
+ <tr><td>SIL International</td><td>世界少数民族语文研究院</td><td>Yunnan Department of Education</td><td>云南省教育厅</td><td>United States</td><td>Ethnic Affairs, Education</td><td>Yunnan</td><td>2017-10-20</td><td>Yunnan</td></tr>
  <tr><td>Blessing Hands</td><td>美国祝福之手</td><td>Guangxi Department of Education</td><td>广西壮族自治区教育厅</td><td>United States</td><td>Education, Health, Poverty Alleviation, Infrastructure</td><td>Guangxi</td><td>2017-10-23</td><td>Beijing, Guangxi, Guizhou, Yunnan, Gansu</td></tr>
  <tr><td>Christian Action</td><td>基督教勵行會</td><td>Qinghai Department of Civil Affairs</td><td>青海省民政廳</td><td>Hong Kong</td><td>Disabilities, Youth, Health, Education, Aging, Poverty Alleviation, Labor, Infrastructure</td><td>Qinghai</td><td>2017-10-25</td><td>Qinghai</td></tr>
- <tr><td>International Association of Amusement Parks and Attractions (IAAPA)</td><td>国际游乐园及景点协会</td><td>Shanghai Tourism Administraion</td><td>上海市旅游局</td><td>United States</td><td>Tourism, Education, Trade</td><td>Shanghai</td><td>2017-10-26</td><td>China</td></tr>
  <tr><td>Daegu Exhibition & Convention Center</td><td>韩国社团法人大邱会展机构</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>South Korea</td><td>Trade</td><td>Shanghai</td><td>2017-10-26</td><td>China</td></tr>
- <tr><td>Gwangju Economic and Hiring Revitalization Institute</td><td>韩国（财）光州广域市经济雇佣振兴院</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>South Korea</td><td>Trade</td><td>Shanghai</td><td>2017-10-26</td><td>China</td></tr>
- <tr><td>The Korean Commercial Arbitration Board</td><td>韩国大韩商事仲裁院</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>South Korea</td><td>Trade</td><td>Shanghai</td><td>2017-10-26</td><td>Beijing, Liaoning, Shanghai, Jiangsu, Zhejiang, Fujian, Shandong, Guangdong</td></tr>
  <tr><td>Gunma Industry Organization</td><td>日本公益财团法人群马县产业支援机构</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>Japan</td><td>Trade</td><td>Shanghai</td><td>2017-10-26</td><td>China</td></tr>
+ <tr><td>Gwangju Economic and Hiring Revitalization Institute</td><td>韩国（财）光州广域市经济雇佣振兴院</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>South Korea</td><td>Trade</td><td>Shanghai</td><td>2017-10-26</td><td>China</td></tr>
+ <tr><td>International Association of Amusement Parks and Attractions (IAAPA)</td><td>国际游乐园及景点协会</td><td>Shanghai Tourism Administration</td><td>上海市旅游局</td><td>United States</td><td>Tourism, Education, Trade</td><td>Shanghai</td><td>2017-10-26</td><td>China</td></tr>
+ <tr><td>The Korean Commercial Arbitration Board</td><td>韩国大韩商事仲裁院</td><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>South Korea</td><td>Trade</td><td>Shanghai</td><td>2017-10-26</td><td>Beijing, Liaoning, Shanghai, Jiangsu, Zhejiang, Fujian, Shandong, Guangdong</td></tr>
+ <tr><td>Rare</td><td>瑞尔保护协会</td><td>Hubei Department of Agriculture</td><td>湖北省农业厅</td><td>United States</td><td>Agriculture, Environment, Education</td><td>Hubei</td><td>2017-10-31</td><td>Hubei</td></tr>
+ <tr><td>"Wirtschaftsförderung und Technologietransfer</td></tr>
+ <tr><td>Schleswig-Holstein GmbH"</td><td>德国石荷州经济技术促进中心</td><td>Zhejiang Department of Commerce</td><td>浙江省商务厅</td><td>Germany</td><td>Trade, Technology, Arts and Culture, International Relations/Exchange</td><td>Zhejiang</td><td>2017-11-02</td><td>Zhejiang</td></tr>
+ <tr><td>The Netherlands Trade Promotion Council</td><td>荷兰贸易促进委员会</td><td>Hubei Department of Agriculture</td><td>湖北省商务厅</td><td>The Netherlands</td><td>Trade, Technology, Education</td><td>Hubei</td><td>2017-10-31</td><td>Hubei</td></tr>
 </tbody></table>
     
 <!–– add your tableizer data above this line––>
