--- a/index.html
+++ b/index.html
@@ -3970,6 +3970,28 @@
         }
       },
       {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            114.326666, 30.583873
+          ]
+        },
+        "properties": {
+          "orgname_en": "Rare",
+          "orgname_ch": "瑞尔保护协会",
+          "psu_en": "Hubei Department of Agriculture",
+          "originloc": "United States",
+          "sector": "Agriculture, Environment, Education",
+          "regloc": "Hubei",
+          "regdate": "October 31, 2017",
+          "actarea": "Hubei",
+          "website_en": "https://www.rare.org/",
+          "website_ch": "https://www.rare.org/zh-hans#.WfyElhNSwg0"
+        }
+      },
+
+      {
       "type": "Feature",
   "geometry": {
     "type": "Point",
@@ -4441,6 +4463,26 @@
         }
       },
 
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             114.269666, 30.595272
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Netherlands Trade Promotion Council",
+          "orgname_ch": "荷兰贸易促进委员会",
+          "psu_en": "Hubei Department of Agriculture",
+          "originloc": "The Netherlands",
+          "sector": "Trade, Technology, Education",
+          "regloc": "Hubei",
+          "regdate": "October 31, 2017",
+          "actarea": "Hubei",
+          "website_ch": "https://www.niyuhelan.nl/%E4%BD%A0%E4%B8%8E%E8%8D%B7%E5%85%B0/%E4%B8%AD%E5%9B%BD/%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC/%E8%8D%B7%E5%85%B0%E8%B4%B8%E6%98%93%E4%BF%83%E8%BF%9B%E5%A7%94%E5%91%98%E4%BC%9A---%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC"
+        }
+      },
 
       {
         "type": "Feature",
@@ -4854,6 +4896,27 @@
           "website_en": "https://china.wcs.org"
         }
       },
+
+      {
+       "type": "Feature",
+       "geometry": {
+         "type": "Point",
+         "coordinates": [
+            120.130718, 30.271427
+         ]
+       },
+       "properties": {
+         "orgname_en": "Wirtschaftsförderung und Technologietransfer Schleswig-Holstein GmbH",
+         "orgname_ch": "德国石荷州经济技术促进中心",
+         "psu_en": "Zhejiang Department of Commerce",
+         "originloc": "Germany",
+         "sector": "Trade, Technology, Arts and Culture, International Relations/Exchange",
+         "regloc": "Zhejiang",
+         "regdate": "November 2, 2017",
+         "actarea": "Zhejiang",
+         "website_ch": "http://www.wtsh.cn/"
+       }
+     },
 
             {
         "type": "Feature",
