--- a/index_RO_dash1.html
+++ b/index_RO_dash1.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-September 2017</h1></div>
+<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-October 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -973,6 +973,40 @@ var freqData=[
 	Urban: 0,
 	Youth: 0}
 	},
+	{
+	Province: "Qinghai",
+	freq:{
+	Aging: 1,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 1,
+	Disaster: 0,
+	Development: 0,
+	Education: 1,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 1,
+	Infrastructure: 1,
+	International: 1,
+	Labor: 0,
+	Law: 0,
+  Migrants: 0,
+	Poverty: 1,
+	Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 8,
+	Urban: 0,
+	Youth: 1}
+	},
+	
+	
 {
 	Province: "Shaanxi",
 	freq:{
@@ -1033,7 +1067,7 @@ var freqData=[
 	Sport: 0,
 	Technology: 1,
 	Tourism: 0,
-	Trade: 1,
+	Trade: 2,
 	Urban: 0,
 	Youth: 0}
 	},
@@ -1048,7 +1082,7 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 1,
 	Development: 3,
-	Education: 1,
+	Education: 2,
 	Energy: 0,
 	Environment: 1,
 	Ethnic: 0,
@@ -1064,8 +1098,8 @@ var freqData=[
 	Rural: 0,
 	Sport: 0,
 	Technology: 1,
-	Tourism: 0,
-	Trade: 44,
+	Tourism: 1,
+	Trade: 50,
 	Urban: 1,
 	Youth: 0}
 	},
@@ -1176,18 +1210,18 @@ var freqData=[
 	Disabilities: 2,
 	Disaster: 8,
 	Development: 0,
-	Education: 5,
+	Education: 7,
 	Energy: 0,
 	Environment: 2,
-	Ethnic: 0,
+	Ethnic: 1,
   Gender: 1,
 	Health: 11,
-	Infrastructure: 2,
+	Infrastructure: 3,
 	International: 1,
 	Labor: 1,
 	Law: 0,
   Migrants: 1,
-	Poverty: 4,
+	Poverty: 5,
 	Religion: 0,
 	Rural: 3,
 	Sport: 0,
