--- a/index_RO_dash2.html
+++ b/index_RO_dash2.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Number of Representative Offices in Certain Fields of Work, by NGOs’ Country/Region of Origin, January-September 2017</h1></div>
+<div id="header"><h1>Number of Representative Offices in Certain Fields of Work, by NGOs’ Country/Region of Origin, January-October 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -640,32 +640,32 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 2,
+	Trade: 3,
 	Urban: 1,
 	Youth: 4}},
 {
 	origin: "Hong Kong",
 	freq:{
-	Aging: 1,
+	Aging: 2,
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 8,
 	Capacity: 8,
-	Disabilities: 3,
+	Disabilities: 4,
 	Disaster: 21,
 	Development: 1,
-	Education: 21,
+	Education: 23,
 	Energy: 0,
 	Environment: 3,
 	Ethnic: 1,
   Gender: 2,
-	Health: 9,
-	Infrastructure: 5,
-	International: 10,
+	Health: 11,
+	Infrastructure: 6,
+	International: 11,
 	Labor: 2,
 	Law: 1,
   Migrants: 5,
-	Poverty: 15,
+	Poverty: 17,
   Religion: 0,
 	Rural: 3,
 	Sport: 0,
@@ -673,7 +673,7 @@ var freqData=[
 	Tourism: 0,
 	Trade: 7,
 	Urban: 1,
-	Youth: 19}},
+	Youth: 20}},
 {
 	origin: "India",
 	freq:{
@@ -765,7 +765,7 @@ var freqData=[
 	Sport: 1,
 	Technology: 1,
 	Tourism: 2,
-	Trade: 29,
+	Trade: 31,
 	Urban: 0,
 	Youth: 0}},
 {
@@ -861,6 +861,39 @@ var freqData=[
 	Trade: 1,
 	Urban: 0,
 	Youth: 0}},
+	
+	{
+	origin: "The Netherlands",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 1,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+  Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 1,
+	Tourism: 0,
+	Trade: 1,
+	Urban: 0,
+	Youth: 0}},
+	
 {
 	origin: "New Zealand",
 	freq:{
@@ -982,7 +1015,7 @@ var freqData=[
 	Sport: 0,
 	Technology: 2,
 	Tourism: 0,
-	Trade: 14,
+	Trade: 17,
 	Urban: 0,
 	Youth: 0}},
 {
@@ -1058,18 +1091,18 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
-	Education: 1,
+	Education: 2,
 	Energy: 0,
 	Environment: 1,
 	Ethnic: 0,
   Gender: 0,
 	Health: 0,
-	Infrastructure: 0,
+	Infrastructure: 1,
 	International: 3,
 	Labor: 0,
 	Law: 0,
   Migrants: 0,
-	Poverty: 0,
+	Poverty: 1,
   Religion: 1,
 	Rural: 0,
 	Sport: 0,
@@ -1168,38 +1201,38 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 4,
+	Trade: 5,
 	Urban: 0,
 	Youth: 1}},
 {
 	origin: "United States",
 	freq:{
 	Aging: 0,
-	Agriculture: 0,
+	Agriculture: 1,
 	Animals: 5,
 	Culture: 2,
 	Capacity: 5,
 	Disabilities: 4,
 	Disaster: 6,
 	Development: 6,
-	Education: 15,
+	Education: 19,
 	Energy: 1,
-	Environment: 12,
-	Ethnic: 0,
+	Environment: 13,
+	Ethnic: 1,
   Gender: 3,
-	Health: 14,
-	Infrastructure: 1,
+	Health: 15,
+	Infrastructure: 2,
 	International: 7,
 	Labor: 0,
 	Law: 0,
   Migrants: 1,
-	Poverty: 6,
+	Poverty: 7,
   Religion: 0,
 	Rural: 1,
 	Sport: 0,
 	Technology: 1,
-	Tourism: 1,
-	Trade: 22,
+	Tourism: 2,
+	Trade: 23,
 	Urban: 1,
 	Youth: 10}}
 ]
